@@ -1,4 +1,5 @@
 HEAD
+    + Print selenium command for debug purposes in verbose mode
     + Lock virtual machine creation to avoid KVM concurrency problems
     + Added critical attribute to tests to make the entire suite fail
     + Delete qcow2 images after convert to raw
